add create user swagger
